# VGGT_train

./: .gitignore  README.md  demo_colmap.py  demo_gradio.py  demo_viser.py  pyproject.toml  requirements_demo.txt  visual_util.py
docs/: package.md
training/: README.md  launch.py  loss.py  trainer.py
training/config/: debug.yaml  default.yaml  default_dataset.yaml
training/data/: augmentation.py  base_dataset.py  composed_dataset.py  dataset_util.py  dynamic_dataloader.py  track_util.py  worker_fn.py
training/data/datasets/: co3d.py
training/train_utils/: checkpoint.py  distributed.py  freeze.py  general.py  gradient_clip.py  logging.py  normalization.py  optimizer.py  tb_writer.py
vggt/models/: aggregator.py  vggt.py
